--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "concurrently": "^9.1.2",
     "nodemon": "^3.1.9",
     "razorpay": "^2.9.6"
   },
@@ -7,7 +8,6 @@
   "version": "1.0.0",
   "description": "Construct a learning progress monitoring system that features a dashboard of student’s learning progress and helps teachers formulate individualized learning pathways for students with associated learning materials.",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
