--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,11 @@
     "chart.js": "^4.3.0",
     "concurrently": "^8.0.1",
     "copy-to-clipboard": "^3.3.3",
+    "install": "^0.13.0",
+    "npm": "^11.2.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.44.2",
