--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "concurrently": "^9.1.2",
+    "moment": "^2.30.1",
     "nodemon": "^3.1.9",
-    "razorpay": "^2.9.6"
+    "razorpay": "^2.9.6",
+    "react-datepicker": "^8.2.1"
   },
   "name": "capstone",
   "version": "1.0.0",
