--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "chart.js": "^4.3.0",
     "concurrently": "^8.0.1",
     "copy-to-clipboard": "^3.3.3",
+    "framer-motion": "^12.6.3",
     "install": "^0.13.0",
     "npm": "^11.2.0",
     "react": "^18.2.0",
