--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^12.6.3",
     "install": "^0.13.0",
+    "lucide-react": "^0.487.0",
     "npm": "^11.2.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
