added server links

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,4 @@
 REACT_APP_BASE_URL=http://localhost:4000
+REACT_APP_RAZORPAY_KEY_ID=rzp_test_SxSUnyRLZVv7jn
+REACT_APP_PAYMENT_CURRENCY=INR
+REACT_APP_PAYMENT_DESCRIPTION="Course Enrollment"
