--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,14 @@
     "chart.js": "^4.3.0",
     "concurrently": "^8.0.1",
     "copy-to-clipboard": "^3.3.3",
+    "crypto-browserify": "^3.12.1",
     "framer-motion": "^12.6.3",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
+    "lodash.isequal": "^4.5.0",
     "lucide-react": "^0.487.0",
     "npm": "^11.2.0",
+    "razorpay": "^2.9.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^8.2.1",
@@ -28,20 +32,13 @@
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "react-super-responsive-table": "^5.2.1",
+    "react-toastify": "^11.0.5",
     "react-type-animation": "^3.0.1",
     "redux-toolkit": "^1.1.2",
     "router-dom": "^3.0.3",
     "swiper": "^9.4.1",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/thepranaygupta/react-tailwind-css-starter-pack.git"
-  },
-  "author": "Pranay Gupta",
-  "bugs": {
-    "url": "https://github.com/thepranaygupta/react-tailwind-css-starter-pack/issues"
   },
   "scripts": {
     "start": "react-scripts start",
